mais coisas na data visualization do dataset dos incidents

--- a/src/properties_db.ipynb
+++ b/src/properties_db.ipynb
@@ -286,7 +286,7 @@
     }
    ],
    "source": [
-    "# See lines and columns (lines,columns)\n",
+    "# See number of lines and columns (lines,columns)\n",
     "df.shape\n"
    ]
   },
